Fixed issue with the users being hidden behind the new york photo on production.

--- a/public/stylesheets/sass/search.sass
+++ b/public/stylesheets/sass/search.sass
@@ -1,3 +1,7 @@
+body.index#search
+	#new-york
+		display: none
+
 #search-results
 	padding: 20px
 			
